--- a/src/about_project.html
+++ b/src/about_project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg" href="images/about_project/star_red.svg" />
-    <script src="https://code.jquery.com/jquery-3.6.3.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.3.js"></script> -->
     <title>о проекте | парашют</title>
 </head>
 <body class="about_project">
