created a folder for components, reorganised folders and files

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <a href="/"><img src="images/style/logo_alt.svg" alt="лого" /></a>
       <div class="menu">
         <p>статьи</p>
-        <p>тесты</p>
+        <a href="components.html"><p>тесты</p></a>
         <p>видео</p>
       </div>
       <div class="search">
