--- a/src/components.html
+++ b/src/components.html
@@ -2,18 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
+    <!-- <link
       rel="icon"
       type="image/svg"
       href="images/about_project/star_red.svg"
-    />
+    /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>тесты</title>
+    <title>compontens</title>
   </head>
-  <body class="section">
-    <a href="/">на главную</a>
-    <h1>тесты</h1>
-    <a href="tests/test_1.html">тест 1</a>
+  <body class="components">
     <div class="a_test-button">example button</div>
+    <div class="a_main-menu">example button</div>
   </body>
 </html>
