--- a/src/components.html
+++ b/src/components.html
@@ -11,7 +11,7 @@
     <title>compontens</title>
   </head>
   <body class="components">
-    <div class="a_test-button">example button</div>
+    <button class="a_test-button">example button</button>
     <div class="a_main-menu">example button</div>
   </body>
 </html>
