--- a/src/tests/test_1.html
+++ b/src/tests/test_1.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg" href="../images/about_project/star_red.svg" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="icon" type="image/svg" href="../images/about_project/star_red.svg" /> -->
     <title>тест 1</title>
-</head>
+  </head>
 
-<body class="section">
-<ul>
-<li><a href="/">на главную</a></li>
-<li><a href="../tests.html">в раздел</a></li>
-</ul>
-<h1>тест 1</h1>
-</body>
-
+  <body class="section">
+    <ul>
+      <li><a href="/">на главную</a></li>
+      <li><a href="../tests.html">в раздел</a></li>
+    </ul>
+    <h1>тест 1</h1>
+  </body>
 </html>
