--- a/src/components.html
+++ b/src/components.html
@@ -12,6 +12,8 @@
   </head>
   <body class="components">
     <button class="a_test-button">example button</button>
-    <div class="a_main-menu">example button</div>
+    <button class="a_main-menu">example button</button>
+    <div class="a_tags orange">example button</div>
+    <div class="a_card-title orange">example button</div>
   </body>
 </html>
