--- a/src/components.html
+++ b/src/components.html
@@ -11,9 +11,6 @@
     <title>compontens</title>
   </head>
   <body class="components">
-    <button class="a_test-button">example button</button>
-    <button class="a_main-menu">example button</button>
-    <div class="a_tags orange">example button</div>
-    <div class="a_card-title orange">example button</div>
+    <div class="c_videos"></div>
   </body>
 </html>
