--- a/src/tests/what-kind-of-inventor-are-you.html
+++ b/src/tests/what-kind-of-inventor-are-you.html
@@ -122,15 +122,15 @@
         <div class="O_test-content">
           <div class="W_test-header">
             <div class="A_test-progress">
-              <h6 class="Orange">1</h6>
-              <h6>/ 5</h6>
+              <h6 class="Orange" id="pages">0 / 0</h6>
+              <!-- <h6>/ 5</h6> -->
             </div>
-            <h5 class="A_question-text">example</h5>
+            <h5 class="A_question-text" id="head">example</h5>
           </div>
-          <div class="C_test-variants">
-            <button class="A_test-button First-One">собака</button>
-            <button class="A_test-button Second-One">кошка</button>
-            <button class="A_test-button Third-One">крокодил</button>
+          <div class="C_test-variants" id="buttons">
+            <button class="A_test-button First-One Correct">собака</button>
+            <button class="A_test-button Second-One Wrong">кошка</button>
+            <button class="A_test-button Third-One None">крокодил</button>
           </div>
         </div>
       </div>
