--- a/src/videos.html
+++ b/src/videos.html
@@ -18,21 +18,22 @@
   <body class="videos">
     <header></header>
     <div class="C_videos">
-      <div class="O_video-card Image-type">
-        <a href="">
+      <a href="videos/its-just-a-coincidence.html">
+        <div class="O_video-card Image-type">
           <div class="O_card-text-content Video">
-            <h4 class="A_card-title White">от идеи до реализации</h4>
+            <h4 class="A_card-title White">вот ведь случайность</h4>
             <div class="C_tags White">
               <p class="A_tag">бытовое</p>
+              <p class="A_tag">странное</p>
               <p class="A_tag">современное</p>
               <p class="A_tag">интересное</p>
             </div>
             <p class="A_card-text Video">
-              показываем создание странных изобретений от идеи до воплощения
+              изобретения которые создали случайно, но без них нам сложно жить!
             </p>
           </div>
-        </a>
-      </div>
+        </div>
+      </a>
       <div class="O_search Long">
         <a href="articles.html">
           <div class="W_widget-header Black">
