--- a/src/videos/its-just-a-coincidence.html
+++ b/src/videos/its-just-a-coincidence.html
@@ -30,9 +30,12 @@
           </form>
         </div>
       </div>
-      <div class="M_section-lead">
+      <div class="M_section-lead Video">
         <div class="A_videos-cover Image-type"></div>
-        <p class="A_cover-lead">text example</p>
+        <p class="A_cover-lead">
+          В этом выпуске рассказываем про изобретения, которые создали случайно,
+          но нам без них сложно жить.
+        </p>
       </div>
     </div>
   </body>
