--- a/src/tests/what-kind-of-inventor-are-you.html
+++ b/src/tests/what-kind-of-inventor-are-you.html
@@ -40,97 +40,27 @@
       </p>
     </div>
     <div class="W_test-container">
-      <div class="O_test-result-container Result-Two">
-        <div class="M_test-score">
-          <h1 class="A_test-score">5</h1>
-          <h6 class="A_score-comment">samba belogo motilka</h6>
-        </div>
-        <button class="A_test-button Retry">пройти заново</button>
-      </div>
       <div class="O_test-result-container Result-One">
         <div class="M_test-score">
-          <h1 class="A_test-score">стулолет</h1>
-          <h6 class="A_score-comment">samba belogo motilka</h6>
-        </div>
-        <button class="A_test-button Retry">пройти заново</button>
-      </div>
-      <div class="O_test-progress-container Five">
-        <div class="O_test-content">
-          <div class="W_test-header">
-            <div class="A_test-progress">
-              <h6 class="Orange">1</h6>
-              <h6>/ 5</h6>
-            </div>
-            <h5 class="A_question-text">example</h5>
-          </div>
-          <div class="C_test-variants">
-            <button class="A_test-button First-Five">дед мороз</button>
-            <button class="A_test-button Second-Five">снегурочка</button>
-            <button class="A_test-button Third-Five">елка</button>
-          </div>
+          <h1 class="A_test-score"></h1>
+          <h5 class="A_test-text"></h5>
+          <h6 class="A_test-comment"></h6>
         </div>
       </div>
-      <div class="O_test-progress-container Four">
-        <div class="O_test-content">
-          <div class="W_test-header">
-            <div class="A_test-progress">
-              <h6 class="Orange">1</h6>
-              <h6>/ 5</h6>
-            </div>
-            <h5 class="A_question-text">example</h5>
-          </div>
-          <div class="C_test-variants">
-            <button class="A_test-button First-Four">повар</button>
-            <button class="A_test-button Second-Four">полицейский</button>
-            <button class="A_test-button Third-Four">учитель</button>
-          </div>
-        </div>
-      </div>
-      <div class="O_test-progress-container Three">
-        <div class="O_test-content">
-          <div class="W_test-header">
-            <div class="A_test-progress">
-              <h6 class="Orange">1</h6>
-              <h6>/ 5</h6>
-            </div>
-            <h5 class="A_question-text">example</h5>
-          </div>
-          <div class="C_test-variants">
-            <button class="A_test-button First-Three">стул</button>
-            <button class="A_test-button Second-Three">стол</button>
-            <button class="A_test-button Third-Three">диван</button>
-          </div>
-        </div>
-      </div>
-      <div class="O_test-progress-container Two">
-        <div class="O_test-content">
-          <div class="W_test-header">
-            <div class="A_test-progress">
-              <h6 class="Orange">1</h6>
-              <h6>/ 5</h6>
-            </div>
-            <h5 class="A_question-text">example</h5>
-          </div>
-          <div class="C_test-variants">
-            <button class="A_test-button First-Two">лимон</button>
-            <button class="A_test-button Second-Two">персик</button>
-            <button class="A_test-button Third-Two">помидор</button>
-          </div>
-        </div>
-      </div>
+
       <div class="O_test-progress-container One">
         <div class="O_test-content">
           <div class="W_test-header">
             <div class="A_test-progress">
-              <h6 class="Orange" id="pages">0 / 0</h6>
+              <h6 class="Orange" id="pages"></h6>
               <!-- <h6>/ 5</h6> -->
             </div>
-            <h5 class="A_question-text" id="head">example</h5>
+            <h5 class="A_question-text" id="head"></h5>
           </div>
           <div class="C_test-variants" id="buttons">
-            <button class="A_test-button First-One Correct">собака</button>
-            <button class="A_test-button Second-One Wrong">кошка</button>
-            <button class="A_test-button Third-One None">крокодил</button>
+            <button class="A_test-button"></button>
+            <button class="A_test-button"></button>
+            <button class="A_test-button"></button>
           </div>
         </div>
       </div>
