--- a/src/tests.html
+++ b/src/tests.html
@@ -214,8 +214,8 @@
               <p class="A_tag">старинное</p>
             </div>
             <p class="A_card-text Test-Article">
-              пришло время испытаний. сможете&nbsp;ли вы&nbsp;ответить
-              на&nbsp;все вопросы про динасферу?
+              время испытаний. сможете&nbsp;ли вы&nbsp;ответить на&nbsp;вопросы
+              про динасферу?
             </p>
           </div>
         </a>
