--- a/src/index.html
+++ b/src/index.html
@@ -143,18 +143,19 @@
       </div>
       <div class="C_articles">
         <div class="O_article-card">
-          <a href="">
+          <a href="articles/its-all-in-the-hat.html" target="_blank">
             <img
-              src="images/cards/sharolet-card-cover.jpg"
-              alt="дядя с трубой"
+              src="images/articles/hat-article-cover.jpg"
+              alt="шляпа"
               class="A_card-cover"
             />
             <div class="O_card-text-content">
-              <h4 class="A_card-title Orange">все дело в шляпе</h4>
+              <h4 class="A_card-title Orange">все дело в&nbsp;шляпе</h4>
               <div class="C_tags Orange">
                 <p class="A_tag">бытовое</p>
                 <p class="A_tag">смешное</p>
                 <p class="A_tag">интересное</p>
+                <p class="A_tag">старинное</p>
               </div>
               <p class="A_card-text Test-Article">
                 с этим прибором вы можете слушать проповедь на площадке для
@@ -164,22 +165,22 @@
           </a>
         </div>
         <div class="O_article-card">
-          <a href="">
+          <a href="articles/kids-in-a-cage.html" target="_blank">
             <img
-              src="images/cards/sharolet-card-cover.jpg"
-              alt="дядя с трубой"
+              src="images/articles/kids-cage-article-cover.jpg"
+              alt="клетки для детки"
               class="A_card-cover"
             />
             <div class="O_card-text-content">
-              <h4 class="A_card-title Orange">что такое шаролет</h4>
+              <h4 class="A_card-title Orange">клетка для детки</h4>
               <div class="C_tags Orange">
                 <p class="A_tag">бытовое</p>
                 <p class="A_tag">старинное</p>
-                <p class="A_tag">интересное</p>
+                <p class="A_tag">просто треш</p>
               </div>
               <p class="A_card-text Test-Article">
-                американский дедушка оборудовал дачный участок под аэродром и
-                полетел
+                впервые испытала клетку-коробку на своем ребенке и сразу решила
+                запатентовать
               </p>
             </div>
           </a>
@@ -194,22 +195,23 @@
           </a>
         </div>
         <div class="O_article-card">
-          <a href="">
+          <a href="articles/hit-my-door.html" target="_blank">
             <img
-              src="images/cards/sharolet-card-cover.jpg"
-              alt="дядя с трубой"
+              src="images/articles/table-tannies-article-cover.jpg"
+              alt="теннис"
               class="A_card-cover"
             />
             <div class="O_card-text-content">
-              <h4 class="A_card-title Orange">почитаем лежа?</h4>
+              <h4 class="A_card-title Orange">попади в мою дверь</h4>
               <div class="C_tags Orange">
                 <p class="A_tag">бытовое</p>
-                <p class="A_tag">старинное</p>
-                <p class="A_tag">постиндустриальное</p>
+                <p class="A_tag">смешное</p>
+                <p class="A_tag">современное</p>
+                <p class="A_tag">просто треш</p>
               </div>
               <p class="A_card-text Test-Article">
-                вы не поверите, но данное изобретение из 1936 года продаётся
-                даже сейчас
+                лучшее изобретение, чтобы скрасить серые будни и провести время
+                весело
               </p>
             </div>
           </a>
