--- a/src/tests/what-kind-of-inventor-are-you.html
+++ b/src/tests/what-kind-of-inventor-are-you.html
@@ -63,6 +63,6 @@
       </div>
     </div>
     <rec-cards-article></rec-cards-article>
-    <footer-section></footer-section>
+    <footer></footer>
   </body>
 </html>
