--- a/src/404.html
+++ b/src/404.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg" href="./images/icon.svg" />
     <title>Ошибка 404</title>
   </head>
-  <body class="bag">
+  <body class="bug">
     <h1>404</h1>
     <h5>
       ой, что-то пошло не так :( <br />
