--- a/src/404.html
+++ b/src/404.html
@@ -12,11 +12,9 @@
       ой, что-то пошло не так :( <br />
       вернитесь на&nbsp;главную и&nbsp;попробуйте снова
     </h5>
-    <div class="M_go-to-button">
+    <a class="M_go-to-button" href="/">
       <img src="images/main_page/arrow-left.svg" alt="стрелка влево" />
-      <form action="/">
-        <button class="A_go-to-button">на главную</button>
-      </form>
-    </div>
+      <p class="A_go-to-button">на главную</p>
+    </a>
   </body>
 </html>
