--- a/src/articles.html
+++ b/src/articles.html
@@ -11,7 +11,7 @@
     <header></header>
     <div class="C_articles">
       <div class="O_article-card">
-        <a href="articles/its-all-in-the-hat.html" target="_blank">
+        <a href="articles/its-all-in-the-hat.html">
           <img
             src="images/articles/hat-article-cover.jpg"
             alt="шляпа"
@@ -32,7 +32,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/lets-read.html" target="_blank">
+        <a href="articles/lets-read.html">
           <img
             src="images/articles/glasses-article-cover.jpg"
             alt="чтение лежа"
@@ -63,7 +63,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/this-is-cyberpunk.html" target="_blank">
+        <a href="articles/this-is-cyberpunk.html">
           <img
             src="images/articles/cyber-article-cover.jpg"
             alt="железный конь"
@@ -84,7 +84,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/kids-in-a-cage.html" target="_blank">
+        <a href="articles/kids-in-a-cage.html">
           <img
             src="images/articles/kids-cage-article-cover.jpg"
             alt="клетки для детки"
@@ -105,7 +105,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/hit-my-door.html" target="_blank">
+        <a href="articles/hit-my-door.html">
           <img
             src="images/articles/table-tannies-article-cover.jpg"
             alt="теннис"
@@ -127,7 +127,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/misunderstood-genius.html" target="_blank">
+        <a href="articles/misunderstood-genius.html">
           <img
             src="images/articles/serf-article-cover.jpg"
             alt="гений"
@@ -148,7 +148,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/make-it-in-time.html" target="_blank">
+        <a href="articles/make-it-in-time.html">
           <img
             src="images/articles/tv-article-cover.jpg"
             alt="тв"
@@ -191,7 +191,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/a-bit-weird.html" target="_blank">
+        <a href="articles/a-bit-weird.html">
           <img
             src="images/articles/dog-article-cover.jpg"
             alt="собака"
@@ -213,7 +213,7 @@
       </div>
 
       <div class="O_article-card">
-        <a href="articles/cooler-than-lightning.html" target="_blank">
+        <a href="articles/cooler-than-lightning.html">
           <img
             src="images/articles/supercar-article-cover.jpg"
             alt="машина"
@@ -234,7 +234,7 @@
       </div>
 
       <div class="O_article-card">
-        <a href="articles/definitely-useless.html" target="_blank">
+        <a href="articles/definitely-useless.html">
           <img
             src="images/articles/chindogu-article-cover.jpg"
             alt="машина"
@@ -255,7 +255,7 @@
       </div>
 
       <div class="O_article-card">
-        <a href="articles/invention-of-the-future.html" target="_blank">
+        <a href="articles/invention-of-the-future.html">
           <img
             src="images/articles/dinosfear-article-cover.jpg"
             alt="машина"
@@ -276,7 +276,7 @@
       </div>
 
       <div class="O_article-card">
-        <a href="articles/speed-i-am-speed.html" target="_blank">
+        <a href="articles/speed-i-am-speed.html">
           <img
             src="images/articles/car-article-cover.jpg"
             alt="самолет"
@@ -311,7 +311,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/soar-into-the-skies.html" target="_blank">
+        <a href="articles/soar-into-the-skies.html">
           <img
             src="images/articles/flyingcar_article_cover.jpg"
             alt="самолет"
@@ -332,7 +332,7 @@
       </div>
 
       <div class="O_article-card">
-        <a href="articles/future-arrived.html" target="_blank">
+        <a href="articles/future-arrived.html">
           <img
             src="images/articles/ai-article-cover.jpg"
             alt="компьютер"
@@ -353,7 +353,7 @@
       </div>
 
       <div class="O_article-card">
-        <a href="articles/rails-rails-sleepers.html" target="_blank">
+        <a href="articles/rails-rails-sleepers.html">
           <img
             src="images/articles/aetotrain-article-cover.jpg"
             alt="поезд"
@@ -374,7 +374,7 @@
       </div>
 
       <div class="O_article-card">
-        <a href="articles/obvious-and-unlikely.html" target="_blank">
+        <a href="articles/obvious-and-unlikely.html">
           <img
             src="images/articles/chindogy-article-cover.jpg"
             alt="вермишель"
@@ -394,7 +394,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/only-in-the-movies.html" target="_blank">
+        <a href="articles/only-in-the-movies.html">
           <img
             src="images/articles/film-article-cover.jpg"
             alt="теннант"
@@ -423,7 +423,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/not-only-in-the-movies.html" target="_blank">
+        <a href="articles/not-only-in-the-movies.html">
           <img
             src="images/articles/reality-article-cover.jpg"
             alt="девушка"
@@ -443,7 +443,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/who-invented-the-parachute.html" target="_blank">
+        <a href="articles/who-invented-the-parachute.html">
           <img
             src="images/articles/parachute-article-cover.jpg"
             alt="парашют"
@@ -463,7 +463,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/and-again-about-the-movies.html" target="_blank">
+        <a href="articles/and-again-about-the-movies.html">
           <img
             src="images/articles/again_article_cover.jpg"
             alt="прикол"
@@ -484,7 +484,7 @@
       </div>
 
       <div class="O_article-card">
-        <a href="articles/total-concentration.html" target="_blank">
+        <a href="articles/total-concentration.html">
           <img
             src="images/articles/isolator-article-cover.jpg"
             alt="изолятор"
@@ -505,7 +505,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/egg-geometry.html" target="_blank">
+        <a href="articles/egg-geometry.html">
           <img
             src="images/articles/eggcuber-article-cover.jpg"
             alt="яйца"
@@ -526,7 +526,7 @@
       </div>
 
       <div class="O_article-card">
-        <a href="articles/viewing-the-future.html" target="_blank">
+        <a href="articles/viewing-the-future.html">
           <img
             src="images/articles/tvglasses-article-cover.jpg"
             alt="очки"
@@ -547,7 +547,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/gentle-dogo-tsap.html" target="_blank">
+        <a href="articles/gentle-dogo-tsap.html">
           <img
             src="images/articles/dog-grabber-cover.jpg"
             alt="собаки"
@@ -568,7 +568,7 @@
         </a>
       </div>
       <div class="O_article-card">
-        <a href="articles/wow-pipe-ah-ah.html" target="_blank">
+        <a href="articles/wow-pipe-ah-ah.html">
           <img
             src="images/articles/pipe-article-cover.jpg"
             alt="теннант"
