--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="C_tests">
         <div class="O_test-card">
-          <a href="tests/what-kind-of-inventor-are-you.html" target="_blank">
+          <a href="tests/what-kind-of-inventor-are-you.html">
             <div class="O_card-text-content">
               <h4 class="A_card-title White">какая ты изобреташка?</h4>
               <div class="C_tags White">
@@ -143,7 +143,7 @@
       </div>
       <div class="C_articles">
         <div class="O_article-card">
-          <a href="articles/its-all-in-the-hat.html" target="_blank">
+          <a href="articles/its-all-in-the-hat.html">
             <img
               src="images/articles/hat-article-cover.jpg"
               alt="шляпа"
@@ -165,7 +165,7 @@
           </a>
         </div>
         <div class="O_article-card">
-          <a href="articles/kids-in-a-cage.html" target="_blank">
+          <a href="articles/kids-in-a-cage.html">
             <img
               src="images/articles/kids-cage-article-cover.jpg"
               alt="клетки для детки"
@@ -195,7 +195,7 @@
           </a>
         </div>
         <div class="O_article-card">
-          <a href="articles/hit-my-door.html" target="_blank">
+          <a href="articles/hit-my-door.html">
             <img
               src="images/articles/table-tannies-article-cover.jpg"
               alt="теннис"
