--- a/src/tests.html
+++ b/src/tests.html
@@ -10,7 +10,7 @@
     <header></header>
     <div class="C_tests">
       <div class="O_test-card">
-        <a href="tests/what-kind-of-inventor-are-you.html" target="_blank">
+        <a href="tests/what-kind-of-inventor-are-you.html">
           <div class="O_card-text-content">
             <h4 class="A_card-title White">изобретения из фильмов</h4>
             <div class="C_tags White">
@@ -42,7 +42,7 @@
         </a>
       </div>
       <div class="O_test-card">
-        <a href="tests/inventing-the-ussr.html" target="_blank">
+        <a href="tests/inventing-the-ussr.html">
           <div class="O_card-text-content">
             <h4 class="A_card-title White">изобретая ссср</h4>
             <div class="C_tags White">
@@ -57,7 +57,7 @@
         </a>
       </div>
       <div class="O_test-card">
-        <a href="tests/guess-who.html" target="_blank">
+        <a href="tests/guess-who.html">
           <div class="O_card-text-content">
             <h4 class="A_card-title White">угадай кто</h4>
             <div class="C_tags White">
@@ -84,7 +84,7 @@
         </a>
       </div>
       <div class="O_test-card">
-        <a href="tests/created-by-us.html" target="_blank">
+        <a href="tests/created-by-us.html">
           <div class="O_card-text-content">
             <h4 class="A_card-title White">создано нами</h4>
             <div class="C_tags White">
@@ -101,7 +101,7 @@
         </a>
       </div>
       <div class="O_test-card">
-        <a href="tests/unusual-horse.html" target="_blank">
+        <a href="tests/unusual-horse.html">
           <div class="O_card-text-content">
             <h4 class="A_card-title White">необычная лошадь</h4>
             <div class="C_tags White">
@@ -117,7 +117,7 @@
         </a>
       </div>
       <div class="O_test-card">
-        <a href="tests/unusual-horse.html" target="_blank">
+        <a href="tests/unusual-horse.html">
           <div class="O_card-text-content">
             <h4 class="A_card-title White">просто молния</h4>
             <div class="C_tags White">
@@ -132,7 +132,7 @@
         </a>
       </div>
       <div class="O_test-card">
-        <a href="tests/not-the-least-bit-weird.html" target="_blank">
+        <a href="tests/not-the-least-bit-weird.html">
           <div class="O_card-text-content">
             <h4 class="A_card-title White">ни капельки ни странно</h4>
             <div class="C_tags White">
@@ -148,7 +148,7 @@
         </a>
       </div>
       <div class="O_test-card">
-        <a href="tests/reality-or-fantasy.html" target="_blank">
+        <a href="tests/reality-or-fantasy.html">
           <div class="O_card-text-content">
             <h4 class="A_card-title White">реальность или фантазия</h4>
             <div class="C_tags White">
@@ -164,7 +164,7 @@
         </a>
       </div>
       <div class="O_test-card">
-        <a href="tests/dont-hit-people.html" target="_blank">
+        <a href="tests/dont-hit-people.html">
           <div class="O_card-text-content">
             <h4 class="A_card-title White">лежачих не бьют</h4>
             <div class="C_tags White">
@@ -180,7 +180,7 @@
         </a>
       </div>
       <div class="O_test-card">
-        <a href="tests/benefit-in-good.html" target="_blank">
+        <a href="tests/benefit-in-good.html">
           <div class="O_card-text-content">
             <h4 class="A_card-title White">польза в добром</h4>
             <div class="C_tags White">
@@ -205,7 +205,7 @@
         </a>
       </div>
       <div class="O_test-card">
-        <a href="tests/dynasphere-and-future.html" target="_blank">
+        <a href="tests/dynasphere-and-future.html">
           <div class="O_card-text-content">
             <h4 class="A_card-title White">динасфера и будущее</h4>
             <div class="C_tags White">
@@ -221,7 +221,7 @@
         </a>
       </div>
       <div class="O_test-card">
-        <a href="tests/total-concentration.html" target="_blank">
+        <a href="tests/total-concentration.html">
           <div class="O_card-text-content">
             <h4 class="A_card-title White">тотальная концентрация</h4>
             <div class="C_tags White">
