--- a/src/tests/unusual-horse.html
+++ b/src/tests/unusual-horse.html
@@ -9,30 +9,22 @@
 
   <body class="test">
     <header-section></header-section>
-    <div class="M_go-to-button">
+    <a href="../tests.html" class="M_go-to-button">
       <img src="../images/main_page/arrow-left.svg" alt="стрелка влево" />
-      <form action="../tests.html">
-        <button class="A_go-to-button">в раздел</button>
-      </form>
-    </div>
+      <p class="A_go-to-button">в раздел</p>
+    </a>
     <div class="W_section-lead">
       <h1 class="A_page-title">необычная лошадь</h1>
       <div class="C_tags Orange">
-        <form action="">
-          <button class="A_tag">смешное</button>
-        </form>
-        <form action="">
-          <button class="A_tag">промышленность</button>
-        </form>
-        <form action="">
-          <button class="A_tag">просто треш</button>
-        </form>
+        <button class="A_tag">смешное</button>
+        <button class="A_tag">промышленность</button>
+        <button class="A_tag">просто треш</button>
       </div>
     </div>
     <div class="M_section-lead">
       <p class="A_cover-lead">
         Тест по&nbsp;статье &laquo;Вот это киберпанк&raquo; поможет вам узнать,
-        насколько хорошо вы&nbsp;усвоили матерьял. Смело проверяйте свои знания
+        насколько хорошо вы&nbsp;усвоили материал. Смело проверяйте свои знания
         в&nbsp;тесте.
       </p>
     </div>
