--- a/src/videos/its-just-a-coincidence.html
+++ b/src/videos/its-just-a-coincidence.html
@@ -20,15 +20,9 @@
       <div class="W_section-lead">
         <h3 class="A_page-title">вот ведь случайность!</h3>
         <div class="C_tags Orange">
-          <form action="">
-            <button class="A_tag">бытовое</button>
-          </form>
-          <form action="">
-            <button class="A_tag">старинное</button>
-          </form>
-          <form action="">
-            <button class="A_tag">интересное</button>
-          </form>
+          <button class="A_tag">бытовое</button>
+          <button class="A_tag">старинное</button>
+          <button class="A_tag">интересное</button>
         </div>
       </div>
       <div class="M_section-lead Video">
@@ -46,7 +40,7 @@
     <div class="O_videos">
       <h2 class="A_title-text">больше видео</h2>
       <div class="C_videos">
-        <a href="weirder-and-earlier.html" target="_blank">
+        <a href="weirder-and-earlier.html">
           <div class="O_video-card coincidance_video_cover">
             <div class="O_card-text-content Video">
               <h4 class="A_card-title White">страньше и страньше</h4>
