--- a/src/tests/what-kind-of-inventor-are-you.html
+++ b/src/tests/what-kind-of-inventor-are-you.html
@@ -9,24 +9,16 @@
 
   <body class="test">
     <header-section></header-section>
-    <div class="M_go-to-button">
+    <a href="../tests.html" class="M_go-to-button">
       <img src="../images/main_page/arrow-left.svg" alt="стрелка влево" />
-      <form action="../tests.html">
-        <button class="A_go-to-button">в раздел</button>
-      </form>
-    </div>
+      <p class="A_go-to-button">в раздел</p>
+    </a>
     <div class="W_section-lead">
       <h1 class="A_page-title">изобретения из фильмов</h1>
       <div class="C_tags Orange">
-        <form action="">
-          <button class="A_tag">бытовое</button>
-        </form>
-        <form action="">
-          <button class="A_tag">смешное</button>
-        </form>
-        <form action="">
-          <button class="A_tag">старинное</button>
-        </form>
+        <button class="A_tag">бытовое</button>
+        <button class="A_tag">смешное</button>
+        <button class="A_tag">старинное</button>
       </div>
     </div>
     <div class="M_section-lead">
@@ -62,7 +54,7 @@
         </div>
       </div>
     </div>
-    <rec-cards-article></rec-cards-article>
+    <rec-cards-tests></rec-cards-tests>
     <footer></footer>
   </body>
 </html>
