--- a/src/videos.html
+++ b/src/videos.html
@@ -9,7 +9,7 @@
   <body class="videos">
     <header></header>
     <div class="C_videos">
-      <a href="videos/its-just-a-coincidence.html" target="_blank">
+      <a href="videos/its-just-a-coincidence.html">
         <div class="O_video-card coincidance_video_cover">
           <div class="O_card-text-content Video">
             <h4 class="A_card-title White">вот ведь случайность</h4>
@@ -47,7 +47,7 @@
         </a>
       </div>
       <div class="O_video-card opentalk_video_cover">
-        <a href="videos/weirder-and-earlier.html" target="_blank">
+        <a href="videos/weirder-and-earlier.html">
           <div class="O_card-text-content Video">
             <h4 class="A_card-title White">страньше и сраньше</h4>
             <div class="C_tags White">
@@ -62,7 +62,7 @@
         </a>
       </div>
       <div class="O_video-card howto_video_cover">
-        <a href="videos/how-to-come-up.html" target="_blank">
+        <a href="videos/how-to-come-up.html">
           <div class="O_card-text-content Video">
             <h4 class="A_card-title White">как это придумать</h4>
             <div class="C_tags White">
@@ -102,7 +102,7 @@
         </a>
       </div>
       <div class="O_video-card better_video_cover">
-        <a href="videos/better-over-the-years.html" target="_blank">
+        <a href="videos/better-over-the-years.html">
           <div class="O_card-text-content Video">
             <h4 class="A_card-title White">лучше с годами</h4>
             <div class="C_tags White">
@@ -116,7 +116,7 @@
           </div>
         </a>
       </div>
-      <a href="videos/new-oddities.htmll" target="_blank">
+      <a href="videos/new-oddities.htmll">
         <div class="O_video-card newest_video_cover">
           <div class="O_card-text-content Video">
             <h4 class="A_card-title White">новые странности</h4>
@@ -132,7 +132,7 @@
           </div>
         </div>
       </a>
-      <a href="videos/i-want-to-fly.html" target="_blank">
+      <a href="videos/i-want-to-fly.html">
         <div class="O_video-card fly_video_cover">
           <div class="O_card-text-content Video">
             <h4 class="A_card-title White">мне летать охота</h4>
@@ -173,7 +173,7 @@
         </a>
       </div>
 
-      <a href="videos/iron-washing.html" target="_blank">
+      <a href="videos/iron-washing.html">
         <div class="O_video-card iron_sope_cover">
           <div class="O_card-text-content Video">
             <h4 class="A_card-title White">мойка железом</h4>
@@ -188,7 +188,7 @@
           </div>
         </div>
       </a>
-      <a href="videos/beauty-micrometer.html" target="_blank">
+      <a href="videos/beauty-micrometer.html">
         <div class="O_video-card old_beauty_video_cover">
           <div class="O_card-text-content Video">
             <h4 class="A_card-title White">микрометр красоты</h4>
@@ -225,7 +225,7 @@
           </div>
         </a>
       </div>
-      <a href="videos/lets-go-lets-go.html" target="_blank">
+      <a href="videos/lets-go-lets-go.html">
         <div class="O_video-card faster_video_cover">
           <div class="O_card-text-content Video">
             <h4 class="A_card-title White">пошло поехало</h4>
@@ -240,7 +240,7 @@
           </div>
         </div>
       </a>
-      <a href="videos/into-the-snow.html" target="_blank">
+      <a href="videos/into-the-snow.html">
         <div class="O_video-card winter_video_cover">
           <div class="O_card-text-content Video">
             <h4 class="A_card-title White">
