--- a/src/videos/lets-go-lets-go.html
+++ b/src/videos/lets-go-lets-go.html
@@ -19,15 +19,9 @@
       <div class="W_section-lead">
         <h3 class="A_page-title">пошло поехало</h3>
         <div class="C_tags Orange">
-          <form action="">
-            <button class="A_tag">бытовое</button>
-          </form>
-          <form action="">
-            <button class="A_tag">старинное</button>
-          </form>
-          <form action="">
-            <button class="A_tag">интересное</button>
-          </form>
+          <button class="A_tag">бытовое</button>
+          <button class="A_tag">старинное</button>
+          <button class="A_tag">интересное</button>
         </div>
       </div>
       <div class="M_section-lead Video">
@@ -47,7 +41,7 @@
     <div class="O_videos">
       <h2 class="A_title-text">больше видео</h2>
       <div class="C_videos">
-        <a href="weirder-and-earlier.html" target="_blank">
+        <a href="weirder-and-earlier.html">
           <div class="O_video-card coincidance_video_cover">
             <div class="O_card-text-content Video">
               <h4 class="A_card-title White">страньше и страньше</h4>
@@ -62,7 +56,7 @@
             </div>
           </div>
         </a>
-        <a href="how-to-come-up.html" target="_blank">
+        <a href="how-to-come-up.html">
           <div class="O_video-card opentalk_video_cover">
             <div class="O_card-text-content Video">
               <h4 class="A_card-title White">как это придумать</h4>
