--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,20 @@
     <link rel="icon" type="image/svg" href="./images/icon.svg" />
     <title>парашут медиа</title>
   </head>
-  <body class="main-page">
+  <body class="main-page" id="cover">
     <header></header>
-    <p class="A_large-text">узнай больше про странные изобретения</p>
+    <div class="A_text-large">
+      <div class="O_note none pos-absolut popup">
+        <a href="articles.html">
+          <div class="W_widget-header Black">
+            <h6 class="A_widget-title">заметка 1</h6>
+            <sidebar-black></sidebar-black>
+          </div>
+          <h4 class="A_note-text">сегодня я изобрел стулолет</h4>
+        </a>
+      </div>
+      <p class="A_large-text">узнай больше про странные изобретения</p>
+    </div>
     <div class="O_tests">
       <div class="M_title">
         <h1 class="A_title-text">тесты</h1>
