--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
     <link rel="icon" type="image/svg" href="./images/icon.svg" />
     <title>парашут медиа</title>
   </head>
-  <body class="main-page" id="cover">
+  <body class="main-page">
     <header></header>
-    <div class="A_text-large">
-      <div class="O_note none pos-absolut popup">
+    <div class="A_text-large" id="cover">
+      <div class="O_note pos-absolut popup">
         <a href="articles.html">
           <div class="W_widget-header Black">
             <h6 class="A_widget-title">заметка 1</h6>
