Revert "v2.0 correct old"
This reverts commit c11021e39dd58b710467b67f7a646d5fdf057e1f.

--- a/src/articles.html
+++ b/src/articles.html
@@ -9,12 +9,8 @@
 
   <body class="articles">
     <header></header>
-    <!-- <ul class="C_tags Orange Head-tags" id=""></ul> -->
     <div class="C_articles">
-      <div
-        class="O_article-card"
-        data-tags="бытовое,смешное,интересное,старинное"
-      >
+      <div class="O_article-card">
         <a href="articles/its-all-in-the-hat.html">
           <img
             src="images/articles/hat-article-cover.jpg"
@@ -35,10 +31,7 @@
           </div>
         </a>
       </div>
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/lets-read.html">
           <img
             src="images/articles/glasses-article-cover.jpg"
@@ -69,10 +62,7 @@
           </h4>
         </a>
       </div>
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/this-is-cyberpunk.html">
           <img
             src="images/articles/cyber-article-cover.jpg"
@@ -93,7 +83,7 @@
           </div>
         </a>
       </div>
-      <div class="O_article-card" data-tags="бытовое,старинное,просто треш">
+      <div class="O_article-card">
         <a href="articles/kids-in-a-cage.html">
           <img
             src="images/articles/kids-cage-article-cover.jpg"
@@ -114,10 +104,7 @@
           </div>
         </a>
       </div>
-      <div
-        class="O_article-card"
-        data-tags="бытовое,смешное,современное,просто треш"
-      >
+      <div class="O_article-card">
         <a href="articles/hit-my-door.html">
           <img
             src="images/articles/table-tannies-article-cover.jpg"
@@ -139,7 +126,7 @@
           </div>
         </a>
       </div>
-      <div class="O_article-card" data-tags="старинное,интересное,просто треш">
+      <div class="O_article-card">
         <a href="articles/misunderstood-genius.html">
           <img
             src="images/articles/serf-article-cover.jpg"
@@ -160,10 +147,7 @@
           </div>
         </a>
       </div>
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/make-it-in-time.html">
           <img
             src="images/articles/tv-article-cover.jpg"
@@ -206,7 +190,7 @@
           />
         </a>
       </div>
-      <div class="O_article-card" data-tags="бытовое,современное,интересное">
+      <div class="O_article-card">
         <a href="articles/a-bit-weird.html">
           <img
             src="images/articles/dog-article-cover.jpg"
@@ -228,10 +212,7 @@
         </a>
       </div>
 
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/cooler-than-lightning.html">
           <img
             src="images/articles/supercar-article-cover.jpg"
@@ -252,10 +233,7 @@
         </a>
       </div>
 
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/definitely-useless.html">
           <img
             src="images/articles/chindogu-article-cover.jpg"
@@ -276,10 +254,7 @@
         </a>
       </div>
 
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/invention-of-the-future.html">
           <img
             src="images/articles/dinosfear-article-cover.jpg"
@@ -300,10 +275,7 @@
         </a>
       </div>
 
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/speed-i-am-speed.html">
           <img
             src="images/articles/car-article-cover.jpg"
@@ -338,10 +310,7 @@
           />
         </a>
       </div>
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/soar-into-the-skies.html">
           <img
             src="images/articles/flyingcar_article_cover.jpg"
@@ -362,10 +331,7 @@
         </a>
       </div>
 
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/future-arrived.html">
           <img
             src="images/articles/ai-article-cover.jpg"
@@ -386,10 +352,7 @@
         </a>
       </div>
 
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/rails-rails-sleepers.html">
           <img
             src="images/articles/aetotrain-article-cover.jpg"
@@ -410,10 +373,7 @@
         </a>
       </div>
 
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/obvious-and-unlikely.html">
           <img
             src="images/articles/chindogy-article-cover.jpg"
@@ -433,10 +393,7 @@
           </div>
         </a>
       </div>
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/only-in-the-movies.html">
           <img
             src="images/articles/film-article-cover.jpg"
@@ -465,10 +422,7 @@
           <h4 class="A_note-text">сегодня я изобрел стулолет</h4>
         </a>
       </div>
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/not-only-in-the-movies.html">
           <img
             src="images/articles/reality-article-cover.jpg"
@@ -488,17 +442,14 @@
           </div>
         </a>
       </div>
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/who-invented-the-parachute.html">
           <img
             src="images/articles/parachute-article-cover.jpg"
             alt="парашют"
             class="A_card-cover"
           />
-          <div class="O_card-text-content domestic">
+          <div class="O_card-text-content">
             <h4 class="A_card-title Orange">кто придумал парашют</h4>
             <div class="C_tags Orange">
               <p class="A_tag">бытовое</p>
@@ -511,10 +462,7 @@
           </div>
         </a>
       </div>
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/and-again-about-the-movies.html">
           <img
             src="images/articles/again_article_cover.jpg"
@@ -535,10 +483,7 @@
         </a>
       </div>
 
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/total-concentration.html">
           <img
             src="images/articles/isolator-article-cover.jpg"
@@ -559,10 +504,7 @@
           </div>
         </a>
       </div>
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/egg-geometry.html">
           <img
             src="images/articles/eggcuber-article-cover.jpg"
@@ -583,10 +525,7 @@
         </a>
       </div>
 
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/viewing-the-future.html">
           <img
             src="images/articles/tvglasses-article-cover.jpg"
@@ -607,10 +546,7 @@
           </div>
         </a>
       </div>
-      <div
-        class="O_article-card"
-        data-tags="бытовое,старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/gentle-dogo-tsap.html">
           <img
             src="images/articles/dog-grabber-cover.jpg"
@@ -631,10 +567,7 @@
           </div>
         </a>
       </div>
-      <div
-        class="O_article-card"
-        data-tags="бытовое,Старинное,постиндустриальное"
-      >
+      <div class="O_article-card">
         <a href="articles/wow-pipe-ah-ah.html">
           <img
             src="images/articles/pipe-article-cover.jpg"
