--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,18 @@
   </head>
   <body class="main-page">
     <header></header>
-    <p class="A_large-text">узнай больше про странные изобретения</p>
+    <div class="A_text-large" id="cover">
+      <div class="O_note pos-absolut popup">
+        <a href="articles.html">
+          <div class="W_widget-header Black">
+            <h6 class="A_widget-title">заметка 1</h6>
+            <sidebar-black></sidebar-black>
+          </div>
+          <h4 class="A_note-text">сегодня я изобрел стулолет</h4>
+        </a>
+      </div>
+      <p class="A_large-text">узнай больше про странные изобретения</p>
+    </div>
     <div class="O_tests">
       <div class="M_title">
         <h1 class="A_title-text">тесты</h1>
