--- a/src/articles.html
+++ b/src/articles.html
@@ -9,7 +9,7 @@
 
   <body class="articles">
     <header></header>
-    <ul class="C_tags Orange Head-tags" id=""></ul>
+    <!-- <div class="C_tags Orange Head-tags" id=""></div> -->
     <div class="C_articles">
       <div
         class="O_article-card"
