--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   </head>
   <body class="main-page">
     <header></header>
+
     <div class="A_text-large" id="cover">
       <div class="O_note pos-absolut popup">
         <a href="articles.html">
@@ -26,7 +27,7 @@
       <div class="M_title">
         <h1 class="A_title-text">тесты</h1>
         <div class="M_go-to-button">
-          <form action="articles.html">
+          <form action="tests.html">
             <button class="A_go-to-button">в раздел</button>
           </form>
           <img src="./images/main_page/arrow-right.svg" alt="стрелка вправо" />
@@ -34,7 +35,7 @@
       </div>
       <div class="C_tests">
         <div class="O_test-card">
-          <a href="tests/what-kind-of-inventor-are-you.html" target="_blank">
+          <a href="tests/what-kind-of-inventor-are-you.html">
             <div class="O_card-text-content">
               <h4 class="A_card-title White">какая ты изобреташка?</h4>
               <div class="C_tags White">
@@ -103,7 +104,7 @@
       <div class="M_title">
         <h1 class="A_title-text">видео</h1>
         <div class="M_go-to-button">
-          <form action="articles.html">
+          <form action="videos.html">
             <button class="A_go-to-button">в раздел</button>
           </form>
           <img src="./images/main_page/arrow-right.svg" alt="стрелка вправо" />
@@ -154,7 +155,7 @@
       </div>
       <div class="C_articles">
         <div class="O_article-card">
-          <a href="articles/its-all-in-the-hat.html" target="_blank">
+          <a href="articles/its-all-in-the-hat.html">
             <img
               src="images/articles/hat-article-cover.jpg"
               alt="шляпа"
@@ -176,7 +177,7 @@
           </a>
         </div>
         <div class="O_article-card">
-          <a href="articles/kids-in-a-cage.html" target="_blank">
+          <a href="articles/kids-in-a-cage.html">
             <img
               src="images/articles/kids-cage-article-cover.jpg"
               alt="клетки для детки"
@@ -206,7 +207,7 @@
           </a>
         </div>
         <div class="O_article-card">
-          <a href="articles/hit-my-door.html" target="_blank">
+          <a href="articles/hit-my-door.html">
             <img
               src="images/articles/table-tannies-article-cover.jpg"
               alt="теннис"
