creating about page

--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -17,21 +17,21 @@
 
     <img
       src="../src/images/styleguide/abs_img_2.png"
-      alt="бумагалстук"
+      alt="молодильник"
       id="abs_img_2"
       class="backImg"
     />
 
     <img
       src="../src/images/styleguide/abs_img_3.png"
-      alt="бумагалстук"
+      alt="лампышка"
       id="abs_img_3"
       class="backImg"
     />
 
     <img
       src="../src/images/styleguide/abs_img_4.png"
-      alt="бумагалстук"
+      alt="стулолет"
       id="abs_img_4"
       class="backImg"
     />
